# agora

./: .gitignore  package-lock.json  pnpm-lock.yaml
apps/web/: eslint.config.mjs  next-sitemap.config.js  package-lock.json  package.json  vitest.config.ts
apps/web/__tests__/: button.test.tsx  event-card.test.tsx  event-location-map.test.tsx  gift-tickets.test.ts  navbar.test.tsx
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  sitemap.ts
apps/web/app/auth/: layout.tsx  page.tsx
apps/web/app/create-event/: page.tsx
apps/web/app/discover/: layout.tsx  page.tsx
apps/web/app/faqs/: page.tsx
apps/web/app/help/: data.ts
apps/web/app/home/: layout.tsx  page.tsx
apps/web/app/organizers/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/stellar/: page.tsx
apps/web/components/events/: TicketModal.tsx  category-chips.tsx  category-section.tsx  create-event-form.tsx  event-card-skeleton.tsx  event-card.tsx  event-location-map.tsx  filter-sidebar.tsx  map-client.tsx  organizer-component.tsx  popular-events-section.tsx  registration-box.tsx
apps/web/components/landing/: faq-section.tsx  hero-section.tsx  info-section.tsx  pricing-section.tsx
apps/web/components/layout/: cookie-banner.tsx  footer.tsx  navbar.tsx  (+1 more)
apps/web/hooks/: useIsMounted.ts
apps/web/lib/: api-handler.ts  prisma.ts  validation.ts
apps/web/utils/: api.ts
contract/: Cargo.toml
contract/contracts/pro_subscription/: Cargo.toml
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/migrations/: 20260623000001_add_event_ticket_inventory.sql  20260624000001_add_host_email_to_events.sql  20260624000002_add_is_featured_to_events.sql  20260624000003_add_event_id_to_qr_payloads.sql
server/src/config/: mod.rs
server/src/handlers/: categories.rs  events.rs  leaderboard.rs  mod.rs  profile.rs  qr_payload.rs
server/src/models/: event.rs
server/src/routes/: mod.rs
server/src/utils/: cursor_pagination.rs  db_timer.rs  docker_compose_tests.rs  error.rs  mod.rs
src/: location.rs  storage.rs
(+41 files in other folders)
